# FeatureSelection

./: .gitignore  CMakeLists.txt  FeatureSelection.kdev4  README.md  otb-module.cmake
.kdev4/: All_otb-v2.kdev4  FeatureSelection.kdev4
CMake/: OTBWrapperMacros.cmake  myOTBConfigure.h.in
app/: CMakeLists.txt  otbFeatureSelection.h
include/: data_accessor_splitting_memOTB.hpp~
src/: CMakeLists.txt  CMakeLists.txt~  copy of otbSelectFST.cxx  otbFeatureSelection.cxx  otbFeatureSelection.h  otbSelectFST.cxx  otbSelectFST.cxx~  otbSelectRandomForests.cxx  otbSelectSFFS.cxx~
